--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+.users {
+  font-size: 10px;
+}
+
+.users .mainDiv {
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  background: lightblue;
+  padding: 3px;
+  margin: 3px;
+}
+
+.users .addressDiv {
+  font-size: 8px;
+  color: aquamarine;
+}
+
+.detailsDiv{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.detailsDiv .details{
+ margin: 10px; 
+}
+
+.detailsDiv .backBtn{
+  margin: 10px; 
+  width: 50px;
+}
